docs: expand build journal with metrics, MVP bundle, and OST link

--- a/docs/journal/2026-01-12.md
+++ b/docs/journal/2026-01-12.md
@@ -1,49 +1,59 @@
-Build Journal — 2026-01-12
+# Build Journal — 2026-01-12
 
-Project
-
-Recurring Ops Workflow SaaS (demo vertical: roommate chores) 
-
+## Project
+**Recurring Ops Workflow SaaS** (demo vertical: roommate chores)  
 A multi-tenant workflow product that automates recurring responsibilities with ownership, reminders/escalations, evidence, approvals, audit logs, and analytics.
 
-Why I’m building this
-Recurring work fails when it’s managed informally (chat + memory). Ownership becomes unclear, tasks slip, and teams/households end up with friction and no history/audit trail.
+## Why I’m building this
+Recurring work fails when it’s managed informally (chat + memory). Ownership becomes unclear, tasks slip, and teams/households end up with friction and no audit trail.
 
-Problem statement (v1)
+## Problem statement (v1)
 Operations teams (and shared households) struggle to complete recurring responsibilities on time because ownership, rotation, and reminders are managed informally across chats and memory, which leads to missed tasks, friction between people, and lack of an audit trail.
 
-JTBD (Jobs To Be Done)
+## JTBD (Jobs To Be Done)
 When I’m responsible for recurring shared tasks in a team/household, I want automatic assignment and reminders with clear accountability, so I can ensure work gets done on time without constant follow-ups or conflict.
 
-Success metric (v1)
-Reduce overdue recurring tasks by **40% within 30 days** of adoption.
+## Outcome & Metrics (v1)
+**Desired outcome:** Reduce overdue recurring tasks by **40% in 30 days** (after adoption).  
+**North Star:** On-time completion rate (%) = (# tasks completed on/before due date) / (total tasks due) * 100  
+**Leading indicators:**
+- Median time-to-complete (created → completed)
+- Reminder engagement rate (% reminders that lead to task opened within 24h)
+- % tasks overdue (due date + 24h grace)
 
-Target users (initial)
+## Target users (initial)
 - Roommates / shared households (demo vertical)
 - Ops teams (small teams with recurring work): Admin, Manager, Contributor
 
-MVP hypothesis (what I believe)
+## MVP hypothesis
 If I provide a simple way to create recurring workflows with clear ownership and reminders, then teams will complete more tasks on time and reduce overdue items.
 
-What I did today
+## Key artifact created today
+**Opportunity Solution Tree (OST):** [docs/assets/opportunity-solution-tree.jpg](../assets/opportunity-solution-tree.jpg)
+
+## MVP v1 bundle (current decision)
+**MVP v1 bundle:** Auto-assign owners + “My Tasks” inbox + Round-robin rotation + Reminder schedule (+ basic dashboard if time permits)
+
+## What I did today
 - Created GitHub repository to document the full product journey
-- Confirmed product direction: horizontal workflow platform (roommates as demo)
-- Created first build journal entry
+- Defined outcome, North Star, and leading indicators
+- Built an Opportunity Solution Tree (Outcome → Opportunities → Solutions → Experiments)
+- Tagged solutions as [MVP] vs [Later] and defined validation experiments
 
-Decisions made today
-- Keep the product enterprise-grade (multi-tenant concepts, roles, auditability)
-- Keep the demo simple (roommate chores) to explain quickly in interviews
-- Focus MVP on recurrence + assignment + completion history before integrations
+## Decisions made today
+- Build as a horizontal workflow platform (roommates demo, enterprise-ready primitives)
+- Prioritize MVP around recurrence + assignment + completion flow before integrations
+- Validate “evidence required” via fake-door test before building uploads/verification
+- Validate reminder timing via A/B test design (24h vs same-day morning)
 
-Risks / open questions
-- What is the simplest “fair rotation” rule that feels genuinely useful?
-- What evidence/approval requirement should be in MVP vs v2?
-- Which user persona should I design for first: Admin or Contributor?
+## Risks / open questions
+- What is the simplest “fair rotation” rule that feels genuinely useful (round-robin vs weighted)?
+- Should “dashboard” ship in MVP or v1.5?
+- What tasks truly need evidence/verification vs simple completion?
+- Which onboarding flow reduces time-to-first-workflow the most?
 
----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-Next step (Step 2)
+## Next step (Step 2)
 Define:
-1) Primary persona (Admin vs Contributor)
-2) Core user journey (happy path)
-3) MVP Must-Haves (MoSCoW)
+1. Primary persona and secondary persona (Admin vs Member)
+2. Core user journeys (Admin setup + Member execution)
+3. MVP scope: screens, data model, and acceptance criteria
