docs: mark step 2 complete in journal (2026-01-13)

--- a/docs/journal/2026-01-13.md
+++ b/docs/journal/2026-01-13.md
@@ -1,7 +1,7 @@
-# Build Journal - 2026-01-13
+# Build Journal — 2026-01-13
 
 ## Summary
-Completed Step 2 discovery artifacts: personas + user journeys (FigJam). Prepared to move into MVP scope and PRD.
+Completed Step 2 (Discovery → Definition): personas, user journeys, MVP scope, PRD, analytics plan, prioritization, risks/assumptions, release plan, and alternatives scan. Ready to move into wireframes and delivery planning.
 
 ## What I completed today
 - Built User Journeys in FigJam:
@@ -20,18 +20,25 @@ Completed Step 2 discovery artifacts: personas + user journeys (FigJam). Prepare
 ## Artifacts created / updated
 - Personas: [docs/research/personas.md](../research/personas.md)
 - User journeys (FigJam) export: [docs/assets/user-flows-mvp-v1.png](../assets/user-flows-mvp-v1.png)
+- MVP scope v1: [docs/roadmap/mvp-scope-v1.md](../roadmap/mvp-scope-v1.md)
+- PRD v1: [docs/prd/prd-v1.md](../prd/prd-v1.md)
+- Analytics plan: [docs/analytics/event-tracking-plan.md](../analytics/event-tracking-plan.md)
+- Prioritization (RICE/MoSCoW): [docs/roadmap/prioritization-v1.md](../roadmap/prioritization-v1.md)
+- Risks & assumptions: [docs/roadmap/risks-and-assumptions.md](../roadmap/risks-and-assumptions.md)
+- Release plan v1: [docs/roadmap/release-plan-v1.md](../roadmap/release-plan-v1.md)
+- Alternatives scan: [docs/research/alternatives-scan.md](../research/alternatives-scan.md)
 
 ## Key decisions
-- Keep “Reassign task” as **Later (v1.5)** to avoid expanding MVP scope.
-- Remove “overloaded” from Journey 3 success criteria to align with Opportunity Tree (Workload view is Later).
-- Keep comments as MVP-lite (lightweight support for “definition of done”).
+- Keep “Reassign task” as **Later (v1.5)** to avoid expanding permissions/audit complexity in MVP.
+- Remove “overloaded” from Journey 3 success criteria to align with the Opportunity Tree (Workload view is Later).
+- Keep comments as MVP-lite (lightweight support for clarifying “definition of done”).
+- Use a minimal reminder schedule in MVP and validate impact via A/B test + pilot.
 
 ## Open questions
 - Should Dashboard be included in MVP v1 or treated as MVP-lite?
 - What default reminder schedule is effective without being annoying?
 
-## Next step (Step 2.3)
-- Link the User Journeys artifact in README: `docs/assets/user-flows-mvp-v1.png`
-- Draft MVP scope: `docs/roadmap/mvp-scope-v1.md` (MVP features, screens, out of scope, acceptance criteria)
-- Draft PRD v1: `docs/prd/prd-v1.md` (problem, personas, JTBD, scope, metrics, risks)
-- Create analytics plan: `docs/analytics/event-tracking-plan.md` (events → properties → metrics)
+## Next step (Step 3)
+- Create MVP wireframes (Figma/FigJam) for Admin + Member screens
+- Convert MVP scope into a delivery backlog (GitHub Issues + Project board)
+- Decide build approach (Bubble vs Next.js + backend) and start implementation of the core workflow loop
